// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Pagination / Regular 1 page 1`] = `
<nav
  aria-label="Pagination"
  role="navigation"
/>
`;

exports[`Storyshots Molecules / Pagination / Regular 2 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 52px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c4"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              2
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c5"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c9"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Regular 12 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c4"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c9"
      >
        <span
          className="c8"
        >
          ...
        </span>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 12"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              12
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c5"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c10"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Regular 999 pages 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 200px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c4"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c9"
      >
        <span
          className="c8"
        >
          ...
        </span>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 999"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              999
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c5"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c10"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Regular Controlled Pagination 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <button
      aria-label="Go to previous page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(90 12 12)"
          />
        </svg>
      </span>
    </button>
    <ul
      className="c5 c6"
    >
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c9"
      >
        <span
          className="c8"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 4"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              4
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 5"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c10"
            >
              5
            </span>
          </span>
        </button>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 6"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              6
            </span>
          </span>
        </button>
      </li>
      <li
        className="c9"
      >
        <span
          className="c8"
        >
          ...
        </span>
      </li>
      <li
        className="c7"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 10"
          className="NormalizedButton__Button-sc-ey7f5x-0 c2"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          >
            <span
              className="c8"
            >
              10
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      >
        <svg
          aria-hidden="true"
          className="c4"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Regular Links Pagination 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <a
      aria-label="Go to previous page"
      className="c2"
      href="/4"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="c3"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          transform="rotate(90 12 12)"
        />
      </svg>
    </a>
    <ul
      className="c4 c5"
    >
      <li
        className="c6"
      >
        <a
          aria-label="Go to Page 1"
          className="c2"
          href="/1"
          onClick={[Function]}
        >
          <span
            className="c7"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="c8"
      >
        <span
          className="c7"
        >
          ...
        </span>
      </li>
      <li
        className="c6"
      >
        <a
          aria-label="Go to Page 4"
          className="c2"
          href="/4"
          onClick={[Function]}
        >
          <span
            className="c7"
          >
            4
          </span>
        </a>
      </li>
      <li
        className="c6"
      >
        <span
          className="c9"
        >
          5
        </span>
      </li>
      <li
        className="c6"
      >
        <a
          aria-label="Go to Page 6"
          className="c2"
          href="/6"
          onClick={[Function]}
        >
          <span
            className="c7"
          >
            6
          </span>
        </a>
      </li>
      <li
        className="c8"
      >
        <span
          className="c7"
        >
          ...
        </span>
      </li>
      <li
        className="c6"
      >
        <a
          aria-label="Go to Page 10"
          className="c2"
          href="/10"
          onClick={[Function]}
        >
          <span
            className="c7"
          >
            10
          </span>
        </a>
      </li>
    </ul>
    <a
      aria-label="Go to next page"
      className="c2"
      href="/6"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="c3"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          transform="rotate(-90 12 12)"
        />
      </svg>
    </a>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Pagination / Regular Regular 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  width: 152px;
}

<nav
  aria-label="Pagination"
  role="navigation"
>
  <div
    className="c0 c1"
  >
    <ul
      className="c2 c3"
    >
      <li
        className="c4"
      >
        <button
          aria-disabled={true}
          aria-label="Current Page, page: 1"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              1
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 2"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              2
            </span>
          </span>
        </button>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 3"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              3
            </span>
          </span>
        </button>
      </li>
      <li
        className="c9"
      >
        <span
          className="c8"
        >
          ...
        </span>
      </li>
      <li
        className="c4"
      >
        <button
          aria-disabled={false}
          aria-label="Go to Page 10"
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c6"
          >
            <span
              className="c8"
            >
              10
            </span>
          </span>
        </button>
      </li>
    </ul>
    <button
      aria-label="Go to next page"
      className="NormalizedButton__Button-sc-ey7f5x-0 c5"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c10"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-90 12 12)"
          />
        </svg>
      </span>
    </button>
  </div>
</nav>
`;
